--- a/gui/gui.html
+++ b/gui/gui.html
@@ -7,6 +7,7 @@
     <div class="speech">
       <p>Welcome to Cyberunk Net</p>
       <p>i am alan</p>
+      <p>testing 1 2 3 . . . </p>
       <p>Test GUI</p>
     </div>
   </body>
